--- a/arch/arm/dts/k3-am62p5-sk-u-boot.dtsi
+++ b/arch/arm/dts/k3-am62p5-sk-u-boot.dtsi
@@ -64,3 +64,16 @@
 &phy_gmii_sel {
 	bootph-all;
 };
+
+&usbss0 {
+	bootph-pre-ram;
+};
+
+&usb0 {
+	/* Enable peripheral mode only during bootup
+	 * to support DFU while allowing Linux to stay
+	 * in OTG mode
+	 */
+	dr_mode = "peripheral";
+	bootph-pre-ram;
+};
