--- a/board/ti/am62x/am62x.env
+++ b/board/ti/am62x/am62x.env
@@ -2,6 +2,9 @@
 #include <env/ti/mmc.env>
 #include <env/ti/k3_dfu.env>
 #include <env/ti/ospi_nand.env>
+#if CONFIG_CMD_REMOTEPROC
+#include <env/ti/k3_rproc.env>
+#endif
 
 name_kern=Image
 console=ttyS2,115200n8
@@ -20,3 +23,4 @@ splashfile=ti_logo_414x97_32bpp.bmp.gz
 splashimage=0x80200000
 splashpos=m,m
 splashsource=sf
+rproc_fw_binaries= 0 /lib/firmware/am62-mcu-m4f0_0-fw
