--- a/arch/arm/dts/k3-am64x-binman.dtsi
+++ b/arch/arm/dts/k3-am64x-binman.dtsi
@@ -124,6 +124,8 @@
 #define AM642_EVM_DTB "u-boot.dtb"
 #define AM642_SK_DTB "arch/arm/dts/k3-am642-sk.dtb"
 
+#define AM642_EVM_NAND_DTBO "arch/arm/dts/k3-am642-evm-nand.dtbo"
+
 &binman {
 	ti-spl {
 		insert-template = <&ti_spl_template>;
@@ -169,6 +171,20 @@
 					};
 
 				};
+
+				fdt-2 {
+					description = "k3-am642-evm-nand overlay";
+					type = "flat_dt";
+					arch = "arm";
+					compression = "none";
+					ti-secure {
+						content = <&spl_am64x_evm_nand_dtb>;
+						keyfile = "custMpk.pem";
+					};
+					spl_am64x_evm_nand_dtb: blob-ext {
+						filename = AM642_EVM_NAND_DTBO;
+					};
+				};
 			};
 
 			configurations {
@@ -186,6 +202,13 @@
 					firmware = "atf";
 					loadables = "tee", "dm", "spl";
 					fdt = "fdt-1";
+				};
+
+				conf-2 {
+					description = "k3-am642-evm-nand";
+					firmware = "atf";
+					loadables = "tee", "dm", "spl";
+					fdt = "fdt-0", "fdt-2";
 				};
 			};
 		};
@@ -238,6 +261,23 @@
 					};
 				};
 
+				fdt-2 {
+					description = "k3-am642-evm-nand overlay";
+					type = "flat_dt";
+					arch = "arm";
+					compression = "none";
+					ti-secure {
+						content = <&am64x_evm_nand_dtb>;
+						keyfile = "custMpk.pem";
+
+					};
+					am64x_evm_nand_dtb: blob-ext {
+						filename = AM642_EVM_NAND_DTBO;
+					};
+					hash {
+						algo = "crc32";
+					};
+				};
 			};
 
 			configurations {
@@ -255,6 +295,13 @@
 					firmware = "uboot";
 					loadables = "uboot";
 					fdt = "fdt-1";
+				};
+
+				conf-2 {
+					description = "k3-am642-evm-nand";
+					firmware = "uboot";
+					loadables = "uboot";
+					fdt = "fdt-0", "fdt-2";
 				};
 			};
 		};
@@ -293,6 +340,16 @@
 						filename = SPL_AM642_SK_DTB;
 					};
 				};
+
+				fdt-2 {
+					description = "k3-am642-evm-nand overlay";
+					type = "flat_dt";
+					arch = "arm";
+					compression = "none";
+					blob {
+						filename = AM642_EVM_NAND_DTBO;
+					};
+				};
 			};
 
 			configurations {
@@ -310,6 +367,13 @@
 					firmware = "atf";
 					loadables = "tee", "dm", "spl";
 					fdt = "fdt-1";
+				};
+
+				conf-2 {
+					description = "k3-am642-evm-nand";
+					firmware = "atf";
+					loadables = "tee", "dm", "spl";
+					fdt = "fdt-0", "fdt-2";
 				};
 			};
 		};
@@ -351,6 +415,19 @@
 						algo = "crc32";
 					};
 				};
+
+				fdt-2 {
+					description = "k3-am642-evm-nand overlay";
+					type = "flat_dt";
+					arch = "arm";
+					compression = "none";
+					blob {
+						filename = AM642_EVM_NAND_DTBO;
+					};
+					hash {
+						algo = "crc32";
+					};
+				};
 			};
 
 			configurations {
@@ -368,6 +445,13 @@
 					firmware = "uboot";
 					loadables = "uboot";
 					fdt = "fdt-1";
+				};
+
+				conf-2 {
+					description = "k3-am642-evm-nand";
+					firmware = "uboot";
+					loadables = "uboot";
+					fdt = "fdt-0", "fdt-2";
 				};
 			};
 		};
