--- a/configs/am64x_evm_a53_defconfig
+++ b/configs/am64x_evm_a53_defconfig
@@ -188,3 +188,6 @@ CONFIG_USB_FUNCTION_MASS_STORAGE=y
 CONFIG_SPL_DFU=y
 CONFIG_SPL_MTD=y
 CONFIG_FS_FAT_MAX_CLUSTSIZE=16384
+CONFIG_SPL_LOAD_FIT_APPLY_OVERLAY=y
+CONFIG_SPL_LOAD_FIT_APPLY_OVERLAY_BUF_SZ=0x100000
+CONFIG_SPL_STACK_R_MALLOC_SIMPLE_LEN=0x1000000
