--- a/configs/am62x_r5_usbmsc.config
+++ b/configs/am62x_r5_usbmsc.config
@@ -23,6 +23,7 @@ CONFIG_USB_GADGET_PRODUCT_NUM=0x6165
 CONFIG_USB_GADGET_DOWNLOAD=y
 # CONFIG_SPL_MMC is not set
 # CONFIG_SPL_LIBDISK_SUPPORT is not set
+# CONFIG_SPL_MTD is not set
 # CONFIG_SPL_SPI is not set
 # CONFIG_SPL_SYS_MALLOC is not set
 # CONFIG_CMD_GPT is not set
